add: get themes from settings

--- a/TODO
+++ b/TODO
@@ -4,3 +4,6 @@ release
 -create settings
 --set theme to settings
 --get theme from settings
+--install settings to system
+fix: service don't catch dbus signal
+fix: rename dbus service
